<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/account_settings">

        <PreferenceScreen
            android:title="Change Account Information"
            android:summary="@string/account_information_summary">

                <intent
                    android:action="android.intent.action.VIEW"
                    android:targetPackage="@string/turtleboys_package"
                    android:targetClass="@string/changeInfo_activity" />

        </PreferenceScreen>

        <CheckBoxPreference
            android:key="notification_preference"
            android:title="@string/notification_setting"
            android:defaultValue="@string/default_notification_preference"
            android:summary="@string/notification_summary"/>

        <!-- <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/title_edittext_preference"
            android:summary="@string/summary_edittext_preference"
            android:dialogTitle="@string/dialog_title_edittext_preference"
            android:dependency="checkbox_preference" /> -->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_settings">

        <CheckBoxPreference
            android:key="animation_preference"
            android:title="@string/animations_setting"
            android:defaultValue="@string/default_animations_preference"/>

        <CheckBoxPreference
            android:key="auto_calendar_preference"
            android:title="@string/auto_calendar_setting"
            android:defaultValue="@string/default_auto_calendar_preference"
            android:summary="@string/auto_calendar_preferences_summary"/>

        <CheckBoxPreference
            android:key="push_preference"
            android:title="@string/push_setting"
            android:defaultValue="@string/default_push_preference"
            android:summary="@string/push_summary"/>

        <!-- <ListPreference
            android:key="list_preference"
            android:title="@string/title_list_preference"
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference" />

        <Preference
            android:title="@string/title_intent_preference">
            <intent android:action="android.intent.action.VIEW"
                android:data="http://codepath.com/" />
        </Preference> -->

    </PreferenceCategory>

</PreferenceScreen>