<FrameLayout
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:id="@+id/userStatistics"
            android:background="#b4b4b4b4">

            <com.parse.ParseImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:id="@+id/userImage"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/userAvatar"
                android:padding="15dp"
                android:src="@mipmap/ic_launcher"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:id="@+id/userFirstName"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/userImage"
                android:layout_toEndOf="@+id/userImage"
                android:paddingRight="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:id="@+id/userLastName"
                android:layout_below="@+id/userFirstName"
                android:paddingBottom="10dp"
                android:layout_toRightOf="@+id/userImage"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingRight="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:id="@+id/numberOfPosts"
                android:layout_below="@+id/userLastName"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_toEndOf="@+id/userImage"
                android:layout_toRightOf="@+id/userImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:id="@+id/postsText"
                android:text="@string/posts_text"
                android:layout_alignTop="@+id/numberOfPosts"
                android:layout_toRightOf="@+id/numberOfPosts"
                android:layout_alignBottom="@+id/numberOfPosts"
                android:paddingRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:id="@+id/numberOfMeals"
                android:layout_below="@+id/numberOfPosts"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_toRightOf="@+id/userImage"
                android:layout_alignRight="@+id/numberOfPosts"
                android:layout_alignEnd="@+id/numberOfPosts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:id="@+id/mealsText"
                android:text="@string/meals_text"
                android:layout_below="@+id/numberOfPosts"
                android:layout_above="@+id/userLevel"
                android:paddingRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/numberOfMeals"
                android:layout_toRightOf="@+id/numberOfMeals" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/userLevel"
                android:text="@string/user_level_text"
                android:layout_below="@+id/numberOfMeals"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_toRightOf="@+id/userImage"
                android:layout_toEndOf="@+id/userImage" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:id="@+id/imageView2"
                android:layout_below="@+id/numberOfMeals"
                android:layout_toRightOf="@+id/userLevel"
                android:layout_gravity="center"
                android:contentDescription="@string/user_level_outline_image"
                android:src="@drawable/ic_tablet_android_black_36dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:id="@+id/userRank"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/userLevel"
                android:layout_below="@+id/numberOfMeals"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/historyListView"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/userStatistics"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</FrameLayout>

